starter/07-Omnifood-Desktop/css/style.css
/************* Header *************************/

.logo {
 height: 2.2rem;
}

.header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  background-color:  #fdf2e9;

  /* Because we want header to be sticky later */
  height: 9.6rem;
  padding: 0 4.8rem;
}

/************* Navigation *************************/

.main-nav-list {
  list-style: none;
  display: flex;
  align-items: center;
  gap: 3.2rem;
}

.main-nav-link:link,
.main-nav-link:visited {
  text-decoration: none;
  color: #333;
  font-size: 1.8rem;
  font-weight: 500;
  transition: all 0.3s;
  display: inline-block;
}

.main-nav-link:hover,
.main-nav-link:active {
  color: #a15818;
}

.main-nav-link.nav-cta:link,
.main-nav-link.nav-cta:visited {
  background-color: #e67e22;
  padding: 1.2rem 2.4rem;
  border-radius: 9px;
  color: #fff;
}

.main-nav-link.nav-cta:hover,
.main-nav-link.nav-cta:active {
  background-color: #cf711f;
}

/************* Hero Section ********************/

.section-hero {
  background-color: #fdf2e9;
  padding: 4.8rem 0 9.6rem 0;
}

.hero {
  max-width: 130rem;
  display: grid;
  grid-template-columns: 1fr 1fr;
  margin: 0 auto;
  padding: 0 3.2rem;
  align-items: center;
  gap: 9.6rem;
}

.hero-description {
  font-size: 2rem;
  line-height: 1.6;
  margin-bottom: 4.8rem;
}

.hero-img {
  width: 100%;
}

.delivered-meals {
  display: flex;
  margin-top: 8rem;
  align-items: center;
  gap: 1.6rem;
}

.delivered-imgs {
  display: flex;
}

.delivered-imgs img {
  height: 4.8rem;
  border-radius: 50%;
  margin-right: -1.6rem;
  border: 3px solid #fdf2e9;
}

.delivered-imgs img:last-child {
  margin-right: 0;
}

.delivered-text {
  font-size: 1.8rem;
  font-weight: 600;
}

.delivered-text span {
  color: #a15818;
  font-weight: 700;
}

/************* Featured-In Section ********************/

.section-featured {
  padding: 4.8rem 0 3.2rem 0;
}

.heading-feature-in {
  font-size: 1.4rem;
  text-transform: uppercase;
  letter-spacing: 0.75px;
  font-weight: 500;
  text-align: center;
  margin-bottom: 2.4rem;
  color: #888;
}

.logos {
  display: flex;
  justify-content: space-around;
}

.logos img {
  height: 3.2rem;
  filter: brightness(0);
  opacity: 0.5;
  transition: 0.25s;
}

.logos img:hover {
 filter: brightness(1);
 opacity: 100%;
}

/************* How it works Section ********************/

.section-how {
  padding: 9.6rem 0;
}

/*.section-how div div {*/
/*  padding: 100px;*/
/*  font-size: 5rem;*/
/*  background-color: #222;*/
/*}*/

.step-number {
  font-size: 8.6rem;
  font-weight: 600;
  color: #ddd;
  margin-bottom: 1.2rem;
}

.step-description {
  font-size: 1.8rem;
  line-height: 1.8;
}

.step-img-box {
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
}

.step-img {
  width: 35%;
}

.step-img-box::before,
.step-img-box::after {
  display: block;
  content: '';
  border-radius: 50%;
  position: absolute;

  /*there is no need to put transform: translate() because the container itself on flex with align-items and justify content to center*/
  /*top: 50%;*/
  /*left: 50%;*/
  /*transform: translate(-50%, -50%);*/
}

.step-img-box::before {
  width: 60%;

  /*height: 60%;*/
  /* 60% of parent width */
  padding-bottom: 60%;

  background-color: #fdf2e9;
  z-index: -2;
}

.step-img-box::after {
  width: 45%;
  padding-bottom: 45%;
  background-color: #fae5d3;
  z-index: -1;
}

